@@ -52,6 +52,18 @@ set +x
 	return 0
 }
 
+lazy_canonical_path() {
+	typeset path="${1}"
+
+	typeset old_path=""
+	while [ "${old_path}" != "${path}" ]; do
+		old_path="${path}"
+		path="${path//\/\///}"
+	done
+
+	printf "${old_path}"
+}
+
 typeset -a all_files
 typeset entry=""
 while read -r -d '' entry; do
